# TeleFlow

./: .gitignore  README.md  TeleFlow.command  Teleapps.command  config.env.example  pyproject.toml  requirements.txt  teleapps.db-shm  teleapps.db-wal
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthDialog.tsx  PageLayout.tsx  ReportItemCard.tsx  SetupWizard.tsx  TagsEditor.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  textarea.tsx
frontend/src/pages/: BulkSend.tsx  Conversations.tsx  Dashboard.tsx  Participants.tsx  Reports.tsx  Settings.tsx
localdata/: .gitkeep
src/teleapps/: __init__.py  config.py  csv_import.py  db.py  jobs.py  llm.py  main.py  migrate_vip_to_tags.py  models.py  reports.py  sync.py  telegram_client.py
src/teleapps/api/: routes.py
src/teleapps/static/: app.js  index.html  style.css
src/teleapps/static_react/: index.html
src/teleapps/static_react/assets/: index-2k3JUUz5.js  index-B7xcdoAG.js  index-BEq6LJOW.css  index-BKHZd6Jn.css  index-BmwVsgWS.js  index-BtLJoL9-.js  index-C2_tSWM5.css  index-C5z3Q-os.js  index-DPP8ttdV.css  (+5 more)
src/teleflow/: __init__.py  bulk_send.py  config.py  csv_import.py  llm.py  main.py  migrate_vip_to_tags.py  models.py  reports.py  sync.py  telegram_client.py
src/teleflow/api/: routes.py  websocket.py
src/teleflow/static/: app.js  index.html  style.css
src/teleflow/static_react/: index.html
src/teleflow/util/: rate_limiter.py  templates.py
(+5 files in other folders)
