[project]
name = "teleflow"
version = "0.1.0"
description = "Local-only Telegram triage and bulk messaging assistant"
requires-python = ">=3.10"
dependencies = [
    "telethon==1.36.0",
    "SQLAlchemy==2.0.36",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "jinja2==3.1.4",
    "tenacity==9.0.0",
    "aiosqlite==0.20.0",
]

[project.scripts]
teleflow = "teleflow.main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
